--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     
     <title>My-Layout</title>
 
-    <link rel="stylesheet" href="./css/estilo.css">
+    <link rel="stylesheet" href="./estilos/estilo.css">
 
 </head>
 
